<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/icon_backarrow" />

            <ImageView
                android:id="@+id/activity_main_IMG_menu"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/icon_menu" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_profile" />

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/icon_tick" />
        </RelativeLayout>

        <TextView
            android:id="@+id/activity_main_TXT_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/activity_main_TXT_username"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/activity_main_TXT_idname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/activity_main_TXT_idname"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/activity_main_TXT_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/activity_main_TXT_desc_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/activity_main_TXT_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_main_TXT_desc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10k"
                    android:textColor="#3EF0A5"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_main_TXT_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/activity_main_TXT_followers"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>

            <View
                android:layout_width="0.8dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="#3EF0A5" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="1.1k"
                    android:textColor="#3EF0A5"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_main_TXT_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/activity_main_TXT_following"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>

            <View
                android:layout_width="0.8dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="#3EF0A5" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="15.2M"
                    android:textColor="#3EF0A5"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_main_TXT_total_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/activity_main_TXT_total_views"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>

            <View
                android:layout_width="0.8dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="#3EF0A5" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="75.2M"
                    android:textColor="#3EF0A5"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/activity_main_TXT_total_likes"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_main_BTN_follow"
                android:layout_width="125dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_round_corner_app_color"
                android:text="@string/activity_main_BTN_follow"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_round_corner_app_color">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/icon_navigate" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="18dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/activity_main_LAY_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/icon_video" />

                <TextView
                    android:id="@+id/activity_main_TXT_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/activity_main_TXT_videos"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/activity_main_LAY_liked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:alpha="0.5"
                android:gravity="center_horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/icon_liked" />

                <TextView
                    android:id="@+id/activity_main_TXT_liked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/activity_main_TXT_liked"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="18dp"
            android:background="@android:color/darker_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_main_RCYLV_videos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:nestedScrollingEnabled="false"
            android:visibility="visible" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>